# IpOpt

CoinIpopt/.kdev4/: CoinIpopt.kdev4
CoinIpopt/Ipopt/contrib/sIPOPT/src/: Makefile
CoinIpopt/Ipopt/examples/MyExample/: Makefile.in  my_nlp.cpp
CoinIpopt/Ipopt/examples/hs071_cpp/: Makefile.in
CoinIpopt/Ipopt/src/: CMakeLists.txt
CoinIpopt/lib/: libcoinhsl.la  libcoinhsl.so.1.5.6  libcoinmumps.la  libcoinmumps.so.1.6.0  libipopt.la  libipopt.so.1.10.8
CoinIpopt/lib/pkgconfig/: coinhsl.pc  coinmumps.pc  ipopt.pc
CoinIpopt/share/coin/doc/Ipopt/: ipopt_addlibs_c.txt  ipopt_addlibs_cpp.txt  ipopt_addlibs_f.txt
My_Solver/: CMakeLists.txt  My_Solver.kdev4  hs071_nlp.cpp
My_Solver/.kdev4/: My_Solver.kdev4
My_Solver/include/: hs071_nlp.hpp
My_Solver/src/: main.cpp  main_solver.cpp
